yaml/rsvp-web-customer1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsvpcustomer1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rsvpcustomer1
    spec:
      containers:
      - name: rsvp-app
        image: teamcloudyuga/rsvpapp
        ports:
        - containerPort: 5000
          name: web-port
