yaml/rsvp-web-customer2.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsvpcustomer2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rsvpcustomer2
    spec:
      containers:
      - name: rsvp-app
        image: teamcloudyuga/rsvpapp
        ports:
        - containerPort: 5000
          name: web-port
