yaml/rsvp-web-service-customer1.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsvpcustomer1
  labels:
    apps: rsvpcustomer1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
  selector:
    app: rsvpcustomer1
