yaml/rsvp-web-service-customer2.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsvpcustomer2
  labels:
    apps: rsvpcustomer2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
  selector:
    app: rsvpcustomer2
