yaml/rsvp-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rsvp-web-ingress
spec:
  rules:
  - host: customer1.dvp.com
    http:
      paths:
      - backend:
          serviceName: rsvpcustomer1
          servicePort: 80
  - host: customer2.dvp.com
    http:
      paths:
      - backend:
          serviceName: rsvpcustomer2
          servicePort: 80
